Bug 913114 - Fix ref counting in winrt widget's GeckoContentController. r=bbondy