widget/windows/winrt/MetroApp.cpp
@@ -107,6 +107,7 @@ MetroApp::ShutdownXPCOM()
 void
 MetroApp::CoreExit()
 {
+  LogFunction();
   HRESULT hr;
   ComPtr<ICoreApplicationExit> coreExit;
   HStringReference className(RuntimeClass_Windows_ApplicationModel_Core_CoreApplication);
